<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar_main" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Understanding your rating"
                    android:textColor="@color/appPrimaryBlue"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/understand_your_rating"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/rating_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="How your rating is calculated"
                    android:textColor="@color/appPrimaryBlue"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/how_your_rating"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/rating_2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1. Clear with the requirement"
                    android:textColor="@color/appPrimaryBlue"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/clear_with_requirement"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/rating_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2.  Qualities "
                    android:textColor="@color/appPrimaryBlue"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/qualities"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/rating_4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3. Courtesy"
                    android:textColor="@color/appPrimaryBlue"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/courtesy"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/rating_5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Why your rating matters"
                    android:textColor="@color/appPrimaryBlue"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/why_your_rating_matters"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>