<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBGWhite">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="@dimen/splash_logo_width"
        android:layout_height="@dimen/splash_logo_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/splash_logo_mtop"
        android:src="@drawable/splash_logo" />

    <LinearLayout
        android:id="@+id/loginLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/splash_logo"
        android:layout_marginTop="@dimen/splash_loginLL_mtop"
        android:gravity="center"
        android:orientation="horizontal">

        <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
            android:id="@+id/alreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_text1"
            android:textColor="@color/appPrimaryFont"
            android:textSize="@dimen/content_size"
            android:textStyle="normal" />

        <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="5dp"
            android:text="@string/splash_login"
            android:textColor="@color/appPurple"
            android:textSize="@dimen/content_size"
            android:textStyle="bold" />
    </LinearLayout>

    <com.turnipconsultants.brongo_client.CustomWidgets.BrongoButton
        android:id="@+id/signupBtn"
        style="@style/BrongoButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/loginLL"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="@dimen/splash_signupBtn_mtop"
        android:text="@string/splash_signup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/signupBtn"
        android:orientation="vertical">

        <com.turnipconsultants.brongo_client.CustomWidgets.BrongoTextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signupBtn"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="OR"
            android:textColor="@color/appPrimaryFont"
            android:textSize="@dimen/content_size"
            android:textStyle="normal" />

        <LinearLayout
            android:id="@+id/socailmediaLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/splash_signupBtn_mleft_mright"
            android:layout_marginRight="@dimen/splash_signupBtn_mleft_mright"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fb_login_IV"
                android:layout_width="@dimen/splash_social_width_height"
                android:layout_height="@dimen/splash_social_width_height"
                android:layout_marginRight="20dp"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/google_login_IV"
                android:layout_width="@dimen/splash_social_width_height"
                android:layout_height="@dimen/splash_social_width_height"

                android:src="@drawable/google" />

            <ImageView
                android:id="@+id/instagram_login_IV"
                android:layout_width="@dimen/splash_social_width_height"
                android:layout_height="@dimen/splash_social_width_height"
                android:layout_weight="1"
                android:visibility="gone"
                android:src="@drawable/insta" />

            <ImageView
                android:id="@+id/linkedin_login_IV"
                android:layout_width="@dimen/splash_social_width_height"
                android:layout_height="@dimen/splash_social_width_height"
                android:layout_weight="1"
                android:visibility="gone"
                android:src="@drawable/linkdin" />

            <ImageView
                android:id="@+id/twitter_login_IV"
                android:layout_width="@dimen/splash_social_width_height"
                android:layout_height="@dimen/splash_social_width_height"
                android:layout_weight="1"
                android:visibility="gone"
                android:src="@drawable/twitter" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>